# Led-Matrix

./: .gitignore  CMakeLists.txt  HUB75driver.cpp  HUB75driver.h  README.md  converted.cpp  picow_blink.c
Additional Resources/: check_bitmap.py
C++/: README.md  ReadMe.md  main.cpp
Circuit Python/: boot_out.txt
Circuit Python/lib/adafruit_display_text/: ._scrolling_label.mpy
src/: Roboto-5.bdf  __init__.py  code.py  constants.py  displayManager.py  secrets_example.py  utilities.py
src/fonts/: BarlowCondensed-Medium-20.bdf  BarlowCondensed-Medium-28.bdf  BarlowCondensed-Thin-20.bdf  BarlowCondensed-Thin-28.bdf  nond-5.bdf  nond-mono-5.bdf
src/lib/adafruit_bitmap_font/: ._ttf.mpy
src/lib/adafruit_imageload/: ._gif.py
